--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
             <scope>test</scope>
         </dependency>
 
+    
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>2.13.0</version>
+      </dependency>
     </dependencies>
 
     <build>
