chore: migrated to archetype 2.1.0 (#77631)

--- a/src/etc/base/project.cluster.properties
+++ b/src/etc/base/project.cluster.properties
@@ -1,2 +1,2 @@
-/subsystem=logging/logger=com.intershop.oms.ps: handlers=[CUSTOMIZATION], use-parent-handlers="false", level="ALL"
-/subsystem=logging/logger=com.intershop.oms.blueprint: handlers=[CUSTOMIZATION], use-parent-handlers="false", level="ALL"
+/subsystem=logging/logger=com.intershop.oms.ps: handlers=[CUSTOMIZATION], use-parent-handlers="false", level="${env.OMS_LOGLEVEL_CUSTOMIZATION}"
+/subsystem=logging/logger=com.intershop.oms.blueprint: handlers=[CUSTOMIZATION], use-parent-handlers="false", level="${env.OMS_LOGLEVEL_CUSTOMIZATION}"
