Feature/71977 manual product upload (#39)
* #71977 added init. form + servlet to upload one file

* #71977 you can upload a files to share/productupload now

* #71997 form supports suppliers and stock level, backlink in one Servlet

* #71977 put prefixed dummy to import IN

* #71977 integrated transformer incl. ICM format files

* #71977 update

* #71977 update

* 71977 MVP creating ABC files only

* #71977 upload works | changed import to ABC-file + autom. N-file and random stock after import

* #71977 fixed pg-function to set cost price, otherwise UCs not working

* #71977 fixed pg function

* Update 220_random_availablity_mapping.sql

improve code style and add  a documentation to the function.

* #71977 aligned core product import and manual upload/ no N-files are generated by config now

* #71977 cleanup incl. servlets

Co-authored-by: Marc Mamin <m.mamin@intershop.com>

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,30 +3,36 @@
     version="3.1">
     <display-name>iom-blueprint-project</display-name>
     <servlet>
-        <display-name>Heartbeat</display-name>
-        <servlet-name>Heartbeat</servlet-name>
-        <servlet-class>com.intershop.oms.ps.servlet.Heartbeat</servlet-class>
-    </servlet>
-    <servlet>
-        <display-name>Testservlet</display-name>
-        <servlet-name>Testservlet</servlet-name>
-        <servlet-class>com.intershop.oms.ps.servlet.Testservlet</servlet-class>
+        <display-name>MockEndpoint</display-name>
+        <servlet-name>MockEndpoint</servlet-name>
+        <servlet-class>com.intershop.oms.ps.servlet.MockEndpoint</servlet-class>
     </servlet>
     <servlet>
         <display-name>ImportStatus</display-name>
         <servlet-name>ImportStatus</servlet-name>
         <servlet-class>com.intershop.oms.ps.servlet.ImportStatus</servlet-class>
     </servlet>
+    <servlet>
+        <display-name>ProductUpload</display-name>
+        <servlet-name>ProductUpload</servlet-name>
+        <servlet-class>com.intershop.oms.blueprint.upload.ProductUpload</servlet-class>
+    </servlet>
+    
     <servlet-mapping>
-        <servlet-name>Heartbeat</servlet-name>
-        <url-pattern>/Heartbeat/*</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Testservlet</servlet-name>
-        <url-pattern>/Testservlet</url-pattern>
+        <servlet-name>MockEndpoint</servlet-name>
+        <url-pattern>/MockEndpoint/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ImportStatus</servlet-name>
         <url-pattern>/ImportStatus</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ImportErrors</servlet-name>
+        <url-pattern>/ImportErrors</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProductUpload</servlet-name>
+        <url-pattern>/ProductUpload</url-pattern>
+    </servlet-mapping>
+    
 </web-app>
