--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 
     <groupId>com.intershop.oms.blueprint</groupId>
     <artifactId>iom-blueprint-project</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>war</packaging>
     <name>IOM iom-blueprint-project APPLICATION</name>
     <description>IOM iom-blueprint-project APPLICATION</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <platform.version>4.1.1</platform.version>
+        <platform.version>4.1.2</platform.version>
         <intershop.docker.repo>docker-internal.rnd.intershop.de/intershophub/</intershop.docker.repo>
         <image.base.name>iom-blueprint-project</image.base.name>
         <image.version.suffix></image.version.suffix>
