feat: support for test-framework (#77872)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,8 @@ resources:
     - repository: IOMDevopsRepo
       type: git
       name: order-iom-partner-devops
-      ref: develop
+      #ref: develop
+      ref: task/77872-test-framework
 
 trigger:
   branches:
