Squashed 'devenv-4-iom/' changes from 8f66fee..f63c70b
f63c70b Merge pull request #23 from intershop/develop
63d554c Task/75996 test config (#22)
612e847 Task/77729 bash completion (#21)

git-subtree-dir: devenv-4-iom
git-subtree-split: f63c70b189bf8bc3d187633130fbd236f65c3c19

--- a/templates/config.properties.template
+++ b/templates/config.properties.template
@@ -255,6 +255,15 @@ CUSTOM_SQLCONF_DIR="${CUSTOM_SQLCONF_DIR}"
 CUSTOM_JSONCONF_DIR="${CUSTOM_JSONCONF_DIR}"
 
 ################################################################################
+# Test related settings
+################################################################################
+
+# When starting the IOM application server and this property is set to true,
+# a file testframework-config.user.yaml will be created in the directory holding
+# the current devenv configuration. 
+CREATE_TEST_CONFIG="${CREATE_TEST_CONFIG}"
+
+################################################################################
 # Access to developer VM
 ################################################################################
 
