--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,8 @@ extends:
   parameters:
     agentPool:                          ubuntu-20.4-DS4_v2-adopt-adoptium-jdk-ora
     artifactsFeed:                      order-iom-releases
-    dockerRepoIOMServiceConnection:     order-iom-docker.intershop.de.dockerhub
-    dockerRepoIOM:                      docker.intershop.de/intershophub
+    dockerRepoIOMServiceConnection:     order-iom-docker.tools.intershop.com
+    dockerRepoIOM:                      docker.tools.intershop.com/iom/intershophub
     acrServiceConnection:               order-iomInternalACR-ISH-ENG-IOM
     acr:                                iominternalacr.azurecr.io
     projectEnvName:                     dev
