--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -53,7 +53,7 @@ MAILHOG_IMAGE=mailhog/mailhog
 # examples:
 # local image:                      iom-dbaccount:1.3.0.0
 # release from ISH Docker registry: docker.intershop.de/intershophub/iom-dbaccount:1.3.0.0
-IOM_DBACCOUNT_IMAGE=docker-internal.rnd.intershop.de/intershophub/iom-dbaccount:1.5.0
+IOM_DBACCOUNT_IMAGE=docker.tools.intershop.com/iom/intershophub/iom-dbaccount:1.5.0
 
 # iom config image (name:tag)
 # examples:
