--- a/.github/workflows/sync-to-azure-boards.yml
+++ b/.github/workflows/sync-to-azure-boards.yml
@@ -15,7 +15,7 @@ jobs:
           github_token: "${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}"
           ado_organization: "intershop-com"
           ado_project: "Products"
-          ado_area_path: "Products\\Intershop Order Management\\Blueprint Projekt"
+          ado_area_path: "Products\\Intershop Order Management\\Blueprint Project"
           ado_iteration_path: "Products\\Domain Order Management"
           ado_wit: "Task"
           ado_new_state: "New"
