--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,18 +5,15 @@
 #  - REPO_PATH:                         host name and path of the customer ACR
 #  - INTERSHOP_REPO_SERVICE_CONNECTION: service connection to the Intershop container registry
 #  - INTERSHOP_REPO_PATH:               host name and path of the Intershop container registry
-#  - TODO: github service-connection:   service connection to public github repos
 variables:
 - group: iom-build-configuration
-- name: INTERSHOP_GITHUB_SERVICE_CONNECTION1
-  value: github-intershop
 
 # Create a repository resource to the Github repo, that is providing the centrally managed CI job.
 resources:
   repositories:
     - repository: iom-partner-devops
       type: github
-      endpoint: $(INTERSHOP_GITHUB_SERVICE_CONNECTION1)
+      endpoint: INTERSHOP_GITHUB
       name: intershop/iom-partner-devops
       ref: main
 
