Squashed 'devenv-4-iom/' changes from 17a9a8d6..0b883b0d
0b883b0d Merge pull request #27 from intershop/develop
88ecd9d0 Task/78770 document azure devops integration (#26)

git-subtree-dir: devenv-4-iom
git-subtree-split: 0b883b0d01cb40904cfb2b47d98af2fc85b8881b

--- a/templates/config.properties.template
+++ b/templates/config.properties.template
@@ -41,6 +41,7 @@ IMAGE_PULL_POLICY=${IMAGE_PULL_POLICY}
 # Name of Kubernetes secret to be used, if authentication at a private Docker
 # registry is required. The secret has to be created manually in default
 # namespace.
+# It's possible to list several pull-secrets separated by comma.
 # More information about pull secrets can be found at:
 # - https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 # - https://docs.microsoft.com/en-us/azure/container-registry/container-registry-auth-kubernetes
