--- a/templates/iom-single.yml.template
+++ b/templates/iom-single.yml.template
@@ -43,7 +43,7 @@ ${DumpsDirYml____}      - name: dumps
 ${DumpsDirYml____}        hostPath:
 ${DumpsDirYml____}          path: "${MOUNT_PREFIX}${CustomDumpsDirAbs}"
       imagePullSecrets:
-      - name: ${IMAGE_PULL_SECRET}
+${ImagePullSecrets}
       containers:
       - name: iom
         image: ${IOM_IMAGE}
