fixed wrong config

--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -156,7 +156,7 @@ JBOSS_XA_POOLSIZE_MAX="50"
 
 # Set a JSON structure similar to oidc.json,
 # https://docs.wildfly.org/26/Admin_Guide.html#Elytron_OIDC_Client
-# {
+# SSO_OIDC_CONFIG='{
 #     "client-id" : "00000000-0000-0000-0000-000000000000",
 #     "credentials": {
 #         "secret":"aaaabbbbbccccccddddddddddeeeeefff"
@@ -164,7 +164,7 @@ JBOSS_XA_POOLSIZE_MAX="50"
 #     "provider-url" : "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/v2.0",
 #     "public-client" : "false",
 #     "ssl-required" : "EXTERNAL"
-# }
+# }'
 
 ################################################################################
 # Database settings (not applied to external database)
