feat: added single sign on in the back office (#74) (#75)
* added disabled SSO config

* fixed wrong config

--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -145,6 +145,27 @@ JBOSS_JAVA_OPTS="-Xms1024M -Xmx2048M"
 JBOSS_XA_POOLSIZE_MIN="10"
 JBOSS_XA_POOLSIZE_MAX="50"
 
+# IOM >= 4.3 supports Single Sign On (SSO).
+# Devenv-4-iom allows the usage of SSO during development. There are two
+# properties, to control SSO.
+# Allowed values are true|false
+# SSO_ENABLED="true"
+
+# Allowed values are azure-ad|keycloak
+# SSO_TYPE="azure-ad"
+
+# Set a JSON structure similar to oidc.json,
+# https://docs.wildfly.org/26/Admin_Guide.html#Elytron_OIDC_Client
+# SSO_OIDC_CONFIG='{
+#     "client-id" : "00000000-0000-0000-0000-000000000000",
+#     "credentials": {
+#         "secret":"aaaabbbbbccccccddddddddddeeeeefff"
+#     },
+#     "provider-url" : "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/v2.0",
+#     "public-client" : "false",
+#     "ssl-required" : "EXTERNAL"
+# }'
+
 ################################################################################
 # Database settings (not applied to external database)
 ################################################################################
