ci: fix ADO sync race condition

--- a/.github/workflows/sync-to-azure-boards.yml
+++ b/.github/workflows/sync-to-azure-boards.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   alert:
     runs-on: ubuntu-latest
+    concurrency:
+      group: sync-to-azure-boards
     steps:
       - uses: danhellem/github-actions-issue-to-work-item@master
         env:
