--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ resources:
       type: github
       endpoint: INTERSHOP_GITHUB
       name: intershop/iom-partner-devops
-      ref: main
+      ref: taks/84230-support-for-custom-maven-repos
 
 # Define, when the pipeline should be triggered.
 # See https://docs.microsoft.com/en-us/azure/devops/pipelines/repos/azure-repos-git?view=azure-devops&tabs=yaml#ci-triggers
@@ -28,10 +28,6 @@ trigger:
 stages:
 - stage: CI
   jobs:
-    - script: |
-        set -x
-        echo test
-      
     - template: ci-job-template.yml@iom-partner-devops
       parameters:
         # You have to set here the name of the environment, that is providing the CI specific configuration! 
