fix: project description is shown now too, if built locally (#85749)

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.5.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>IOM iom-blueprint-project APPLICATION</name>
-    <description>IOM iom-blueprint-project APPLICATION</description>
+    <description>IOM blueprint-project</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -429,6 +429,7 @@
                                     <environmentVariables>
                                         <IMAGE_BASE_NAME>${image.base.name}</IMAGE_BASE_NAME>
                                         <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
+                                        <PROJECT_DESCRIPTION>${project.description}</PROJECT_DESCRIPTION>
                                         <IMAGE_TAG>${image.version}</IMAGE_TAG>
                                         <IOM_IMAGE_NAME>iom</IOM_IMAGE_NAME>
                                         <IOM_VERSION>${platform.version}</IOM_VERSION>
