--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -42,25 +42,16 @@ IMAGE_PULL_POLICY=IfNotPresent
 IMAGE_PULL_SECRET=
 
 # postgres image (name:tag)
-# example:                  postgres:11
 DOCKER_DB_IMAGE=postgres:15
 
 # mailhog image (name:tag)
-# example:                  mailhog/mailhog
 MAILHOG_IMAGE=mailhog/mailhog
 
 # iom dbaccount image (name:tag)
-# examples:
-# local image:                      iom-dbaccount:1.3.0.0
-# release from ISH Docker registry: docker.intershop.de/intershophub/iom-dbaccount:1.3.0.0
-IOM_DBACCOUNT_IMAGE=docker.tools.intershop.com/iom/intershophub/iom-dbaccount:1.6.0
+# release from ISH Docker registry
+IOM_DBACCOUNT_IMAGE=docker.tools.intershop.com/iom/intershophub/iom-dbaccount:1.7.0
 
 # iom image (name:tag)
-# beginning with IOM 4 the distribution model of IOM was changed from two to one
-# docker image. devenv-4-iom can be used with both types of IOM, double and
-# single image distribution.
-# If IOM_IMAGE is set, the properties IOM_CONFIG_IMAGE and IOM_APP_IMAGE will
-# be ignored.
 # examples:
 # local image:                      iom:4.1.2
 # locally built project image:      prj-iom:4.1.2-1.2.0.0-SNAPSHOT
